[package]
name = "threejs-rs"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"
description = "Bindings to JavaScript framework Three.js"
license = "MIT"
repository = "https://github.com/a-isaiahharvey/threejs-rs"
keywords = ["three", "javascript", "bindings", "wasm"]
categories = ["frontend"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
serde_json = "1.0.96"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "BiquadFilterNode",
    "Element",
    "GainNode",
    "MediaStream",
    "PannerNode",
]
